--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
     "watch:11ty": "eleventy --serve",
     "build": "yarn build:stylus && yarn build:11ty",
     "dev": "concurrently -n stylus,11ty \"yarn watch:stylus\" \"yarn watch:11ty\""
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/valarnet/valarnet-blog.git"
 }
